<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">桔子星球</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="open_start">开启新世界</string>
    <string name="bubble_title">泡泡</string>
    <string name="sel_pic">选择图片</string>
    <string name="please_input_content">请输入内容</string>
    <string name="publish">发送</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="origin_star">桔子星球</string>
    <string name="next">下一步</string>
    <string name="send_sms_code">发送验证码</string>
    <string name="nick">昵称</string>
    <string name="done">完成</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="password_confirm_hint">请再次输入新密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="sms_code">验证码</string>
    <string name="unknown_exception">未知错误</string>
    <string name="please_input_password">请输入3~18位密码</string>
    <string name="confirm_password_error">确认密码错误</string>
    <string name="please_input_mobile">请输入手机号</string>
    <string name="please_input_sms_code">请输入短信验证码</string>
    <string name="encounters">邂逅</string>
    <string name="register_failed">注册失败</string>
    <string name="reset_failed">重置密码失败</string>
    <string name="request_time_out">请求超时</string>
    <string name="network_error_message">哎呦！网络不太顺畅哦！</string>
    <string name="request_data_error">哎呦！数据解析异常了！</string>
    <string name="no_user_token">您还没有登录权限</string>
    <string name="user_token_invalid">登录已超时，请重新登录</string>
    <string name="register_info_lose">请确认填写信息完整</string>
    <string name="user_token_expired">登录已超时，请重新登录</string>
    <string name="account_or_password_error">用户名或者密码错误</string>
    <string name="x_second_can_send">%d秒后重发</string>
    <string name="send_failed">发送失败！</string>
</resources>
